--- a/assets/post/components/content/columns.css
+++ b/assets/post/components/content/columns.css
@@ -22,7 +22,7 @@
         $column-background--left: transparent;
 
         /* Right */
-        $column-background--right: #ebebeb;
+        $column-background--right: $grey-95;
 
 /* Containers =============================================================== */
 .column-section {
