--- a/assets/post/components/forms/forms-variables.css
+++ b/assets/post/components/forms/forms-variables.css
@@ -16,9 +16,9 @@ $form-section-padding: 1rem 0;
     $form-section-title-font-weight: bold;
     $form-section-title-font-style: normal;
     $form-section-title-font-size: $font-scale-h4;
-    $form-section-title-color: black;
+    $form-section-title-color: $black;
     $form-section-title-text-transform: none;
-    $form-section-title-border: 2px solid black;
+    $form-section-title-border: 2px solid $black;
     $form-section-title-padding: 0 0 0.5rem;
     $form-section-title-margin: 0 0 0.5rem;
 
@@ -27,7 +27,7 @@ $form-section-padding: 1rem 0;
     $form-section-desc-font-weight: normal;
     $form-section-desc-font-style: normal;
     $form-section-desc-font-size: $font-scale-baseline;
-    $form-section-desc-color: black;
+    $form-section-desc-color: $black;
     $form-section-desc-text-transform: none;
     $form-section-desc-padding: 0;
     $form-section-desc-margin: 0;
@@ -37,7 +37,7 @@ $form-section-padding: 1rem 0;
     /* Labels: Primary */
     $form-label-font-family: $global-font-family;
     $form-label-font-size: 0.85rem;
-    $form-label-color: black;
+    $form-label-color: $black;
     $form-label-font-weight: 600;
     $form-label-font-style: normal;
     $form-label-margin: 0 0 0.5rem;
@@ -61,13 +61,13 @@ $form-field-font-size: $font-scale-baseline;
 $form-field-font-weight: normal;
 $form-field-padding: 0.5rem;
 $form-field-background: white;
-$form-field-color: black;
+$form-field-color: $black;
 
     /* Fields: Hover */
     $form-field-border-color--hover: $gray-60;
 
     /* Fields: Focus */
-    $form-field-border-color--focus: teal;
+    $form-field-border-color--focus: $pink;
 
     /* Fields: Textarea */
     $form-field-textarea-height: 250px;
@@ -76,7 +76,7 @@ $form-field-color: black;
     $form-field-select-background--hover: color($form-field-border-color--focus tint(95%));
 
     /* Fields: File */
-    $form-field-file-background: black;
+    $form-field-file-background: $black;
     $form-field-border-radius: $form-field-border-radius;
     $form-field-file-padding: $form-field-padding;
     $form-field-file-color: white;
