--- a/assets/post/spec/palette.css
+++ b/assets/post/spec/palette.css
@@ -7,3 +7,20 @@
         - Justin Bellefontaine
 
 ============================================================================= */
+
+$gray--mid: color(#8694b6 shade(5%));
+$gray--light: #f5f6fa;
+$blue--dark: #5983ff;
+$blue--light: #49bcff;
+$purple: #ac5bff;
+$green: #50d76e;
+$red: #ff5d5d;
+$orange: #ff9d00;
+$black: #222;
+$pink: #da2f6d;
+
+/* Utility Colors */
+$color-utility--danger: $red;
+$color-utility--warning: $orange;
+$color-utility--success: $green;
+$color-utility--neutral: $blue--light;
