--- a/assets/post/components/cards/cards.css
+++ b/assets/post/components/cards/cards.css
@@ -11,8 +11,8 @@
 /* Variables ================================================================ */
 
     $card-padding: 2rem;
-    $card-shadow: 0 2px 5px 0 rgba(0,0,0,0.1);
-    $card-border: 1px solid #ebebeb;
+    $card-shadow: 0 2px 25px 0 rgba(0,0,0,.05),0 6px 12px 0 rgba(0,0,0,0.05);
+    $card-border: none;
 
 /* Containers =============================================================== */
 .is-card {
