--- a/assets/post/components/forms/forms-choices.css
+++ b/assets/post/components/forms/forms-choices.css
@@ -36,8 +36,8 @@
         $form-checkbox-border--hover: $form-checkbox-border;
 
         /* Checkboxes: Checked */
-        $form-checkbox-background--checked: black;
-        $form-checkbox-border--checked: 2px solid black;
+        $form-checkbox-background--checked: $black;
+        $form-checkbox-border--checked: 2px solid $black;
         $form-checkbox-outline--checked: inset 0 0 0 4px $white;
 
     /* Radio */
@@ -52,8 +52,8 @@
         $form-radio-border--hover: $form-radio-border;
 
         /* Radio: Checked */
-        $form-radio-background--checked: black;
-        $form-radio-border--checked: 2px solid black;
+        $form-radio-background--checked: $black;
+        $form-radio-border--checked: 2px solid $black;
         $form-radio-outline--checked: inset 0 0 0 4px $white;
 
     /* Radio Buttons */
